2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/upnp-service.png:
	* src/pixmaps/upnp-state-variable.png:

	Icons update from Lapo Calamandrei.

2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:

	Only update an out argument textview if there is any text to put there.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-action.png:
	* src/pixmaps/upnp-network.png:

	Remove unneeded icons.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	- Get the action icon from the gtk stock as well
	- Clean-up the code for loading pixbuf from gtk stock icons.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	- Get the network icon from the gtk stock
	- Put the code for loading pixbuf from stock into a separate function.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/upnp-device.png:

	Icon update from Lapo Calamandrei.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Display a message in the device treeview instead of a warning on the
	console when introspection is not available for a service.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	No need to pass glade_xml file to init_icons().

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-upnp.c:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	Remove the unneeded usage of G_OBJECT() macro.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:
	* src/universal-cp-devicetreeview.c:

	Fix some ref leaks and a small stylistic change.
